# kappa-v2

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  go.mod  go.sum  go.work  go.work.sum  main.go
Kappa-Bruno/: Get container logs.bru  Get functions.bru  Invoke function.bru  New Function.bru  bruno.json  collection.bru
go/: go.mod  go.sum  main.go
go-new/: Makefile  go.sum  main.go
go-new/code_example/: main  main.go
go-new/internal/cont/: cont.go
go/bootstrap/go/: bootstrap.go  handler.go
go/bootstrap/node/: index.js  package-lock.json  package.json
go/internal/cont/: cont.go
go/internal/runtime/: runtime.go
handler_example/: go.mod  main.go
kappa-handler/: main.go
kappa-service/: go.mod  go.sum
kappa-service/cmd/kappa-service/: main.go
kappa-service/internal/kappa/: kappa.go
main/: docker-compose.yml  go.mod
main/cmd/kappa/: main.go
main/internal/repository/: models.go  player.sql.go
main/internal/router/: router.go
main/migrations/: README
main/pkg/: READ
main/query/: player.sql
main/tests/: READ
next/: package-lock.json  package.json
next/src/app/: layout.tsx  page.tsx
next/src/components/: dashboard-layout.tsx  function-code-editor.tsx  function-invocation-history.tsx  function-metrics-chart.tsx
pkg/handler/: handler.go  handler_test.go
pkg/logger/: zap.go  zap_test.go
rust/: Cargo.toml
service/: go.mod  go.sum
service/cmd/service/: main.go
service/internal/cont/: cont.go  cont_test.go
src/: main.rs
vm/: Makefile  flake.nix  vm.nix
vm/my-go-app/: default.nix  go.mod  main.go
(+8 files in other folders)
